--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,6 @@ authors = ["Tibor Djurica Potpara <tibor.djurica@ojdip.net>"]
 
 [dependencies]
 rustyline = "2.1.0"
-colored = "1.6"
+log = "0.4"
+pretty_env_logger = "0.2"
+clap = "2.32.0"
