--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Tibor Djurica Potpara <tibor.djurica@ojdip.net>"]
 
 [dependencies]
-rustyline = "2.1.0"
-log = "0.4"
-pretty_env_logger = "0.2"
-clap = "2.32.0"
+rustyline = "*"
+log = "*"
+pretty_env_logger = "*"
+clap = "*"
